# Project-India

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY-NOW.md  DEPLOYMENT-GUIDE.md  LICENSE  PHASE1-SUMMARY.md  README-DEPLOYMENT.md  README.md  ROADMAP.md  SECURITY.md  STREAMLIT-DEPLOYMENT.md  compose.yaml  dashboard.py  pyproject.toml  requirements.txt  research_config.json
.github/: dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-add-topic.md  02-modify-schedule.md  03-research-status.md  bug_report.yml  config.yml  documentation.yml  feature_request.yml  good_first_issue.yml  question.yml  research_task.yml
.github/workflows/: ci.yml  configure-topic-schedule.yml  deploy.yml  generate-presentation.yml  incremental-research.yml  scheduled-research.yml  topic-intake-research.yml
.streamlit/: config.toml
agent-ref/: 01-working-style.md  02-architecture.md  03-data-and-research-flow.md  04-commands.md  05-branch-and-pr-workflow.md  06-current-topics.md  07-dashboard-and-deployment.md
analyses/reports/: india-semiconductor-mission-brief.md  us-iran-war-2026-brief.md  (+4 more)
db/: schema.sql
docs/: ARCHITECTURE.md  DEPLOYMENT.md  GOOD_FIRST_ISSUES.md  RESEARCH_PIPELINE.md
project_india/: __init__.py  cli.py  configure_topic.py  deep_research.py  increment_research.py  paths.py  postgres_db.py  presentation_builder.py  research_db.py  research_plan.py  research_taxonomy.py  scheduling.py  timelines.py  topics.py
scripts/: apply_github_labels.sh
sources/: india-semiconductor-mission-sources.md  us-iran-war-2026-sources.md  us-iran-war-sources.md  west-bengal-assembly-election-2026-sources.md  west-bengal-elections-sources.md
tests/: test_cli.py  test_paths.py
workflows/: SCHEDULED-RESEARCH-GUIDE.md  presentation_workflow.md  research_workflow.md
(+34 files in other folders)
