[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "project-india"
version = "0.1.0"
description = "AI-assisted research workflows for Project India."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
analysis = [
  "pandas>=2.2",
  "matplotlib>=3.8",
  "jupyter>=1.0",
]
presentation = [
  "python-pptx>=0.6.23",
]
research = [
  "openai>=2.0",
]
dashboard = [
  "streamlit>=1.28.0",
  "pandas>=2.0",
  "plotly>=5.17",
]

[project.scripts]
project-india = "project_india.cli:main"

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
include = ["project_india*"]
