[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "project-india"
version = "0.1.0"
description = "Postgres-first research data tools for Project India."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
analysis = [
  "pandas>=2.2",
  "matplotlib>=3.8",
  "jupyter>=1.0",
]
db = [
  "psycopg[binary]>=3.2",
]
dashboard = [
  "streamlit>=1.57,<2",
  "pandas>=2.0",
  "plotly>=5.17",
]

[project.scripts]
project-india = "project_india.cli:main"

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
include = ["project_india*"]
